# Cell-game-2D

./: '  .clang-format  .clang-tidy  .clangd  .gitmodules  CMakeLists.txt  config.h  main.cpp
Bridges/: FieldViewBridge.h  LogViewBridge.h
Components/: Component.cpp  Component.h  ComponentBag.cpp  ComponentBag.h  ComponentBag.inl  Transform.cpp  Transform.h
Controllers/: ObjectController.cpp  ObjectController.h  TestController.cpp  TestController.h
Core/: Application.cpp  Application.h  GameDeployer.h  GameInstaller.cpp  GameInstaller.h  IApplication.h  ITickable.h  InputSystem.cpp  InputSystem.h  InputSystemDeployer.cpp  InputSystemDeployer.h  LogSystemCustomizer.h  LoggingSystemDeployer.h  MainApplication.cpp  MainApplication.h  ViewSystemDeployer.cpp  ViewSystemDeployer.h  World.cpp  World.h
Core/View/: FieldViewMessage.h  IMainApplication.h
Datatypes/: Point.cpp  Point.h  Rect.cpp  Rect.h  Size.cpp  Size.h  Vector.cpp  Vector.h
Diagrams/: .$class.drawio.dtmp  class.drawio
ECS/Components/: AddMoneyEvent.cpp  AddMoneyEvent.h  DealDamageEvent.cpp  DealDamageEvent.h  Health.cpp  Health.h  Intelligence.cpp  Intelligence.h  Money.cpp  Money.h  Transform.cpp  Transform.h  Velocity.cpp  Velocity.h  Weapon.cpp  Weapon.h
ECS/EntityProviders/: PlayerProvider.cpp  PlayerProvider.h
ECS/Markers/: ControllableMarker.cpp  ControllableMarker.h  DeadMarker.cpp  DeadMarker.h  InvertControlMarker.cpp  InvertControlMarker.h  PlayerMarker.cpp  PlayerMarker.h
ECS/Systems/: AddMoneySystem.cpp  AddMoneySystem.h  CleanDeadSystem.cpp  CleanDeadSystem.h  DealDamageSystem.cpp  DealDamageSystem.h  HealthSystem.cpp  HealthSystem.h  MovementSystem.cpp  MovementSystem.h  ObjectController.cpp  ObjectController.h  ObjectControllerSystem.cpp  ObjectControllerSystem.h
ECSLib/Components/: Component.cpp  Component.h  ComponentBag.cpp  ComponentBag.h  ComponentConcept.h  ComponentsCache.cpp  ComponentsCache.h  Concept.h  TypeIdentifier.cpp  TypeIdentifier.h
ECSLib/Core/: Entity.cpp  Entity.h  Filter.h  World.cpp  World.h
ECSLib/Systems/: ISystem.h  System.cpp  System.h  TSystem.h  TickableSystem.h
Engine/Core/: Application.cpp  Application.h  IApplication.h  ITickable.h  MainApplication.cpp  MainApplication.h
Engine/Input/: ControlScheme.cpp  ControlScheme.h  IController.h  InputMediator.cpp  InputMediator.h  InputMessage.h  InputReader.h  InputSystem.cpp  InputSystem.h  KeyboardInputReader.cpp  KeyboardInputReader.h
Engine/Utility/: InfoMessage.h
Engine/View/: ViewMessage.h  ViewRenderer.h  ViewSystem.cpp  ViewSystem.h
Events/: Event.cpp  Event.h  EventFactory.cpp  EventFactory.h  IEvent.h  InvertControlEvent.cpp  InvertControlEvent.h
Field/: Cell.h  Field.h  FieldEventMessage.h
Game/: FieldConfigurator.cpp  FieldConfigurator.h  Game.cpp  Game.h  GameController.cpp  GameController.h  IGame.h  SaveController.cpp  SaveController.h  Saver.cpp  Saver.h
Game/Events/: ControlInversionEvent.cpp  ControlInversionEvent.h  EnemyEvent.cpp  EnemyEvent.h  Event.cpp  Event.h  EventFactory.cpp  EventFactory.h  ExitEvent.cpp  ExitEvent.h  FieldEvent.cpp  FieldEvent.h  GenerateMoneyEvent.cpp  GenerateMoneyEvent.h  IEvent.h  InvertControlEvent.cpp  InvertControlEvent.h  MoneyEvent.cpp  MoneyEvent.h  WorldEvent.cpp  WorldEvent.h
Game/Field/: Cell.cpp  Cell.h  Field.cpp  Field.h  FieldChanger.cpp  FieldChanger.h  FieldEventMessage.h  FieldGenerator.cpp  FieldGenerator.h  FieldHelper.cpp  FieldHelper.h
Input/: ControlScheme.cpp  ControlScheme.h  IController.h  InputMessage.h  InputReader.cpp  InputReader.h  KeyInfo.h  KeyboardInputReaderGenerator.cpp  KeyboardInputReaderGenerator.h
Logger/: FieldLogger.cpp  FieldLogger.h
Message/: FieldInfoMessage.cpp  FieldInfoMessage.h  LogInfoMesssage.h  PlayerInfoMessage.h
Objects/: Entity.cpp  Entity.h  Object.h  Player.cpp  Player.h
Objects/Field/: Cell.cpp  Cell.h  Field.cpp  Field.h  FieldEventMessage.h
Objects/Map/: Cell.cpp  Cell.h  Field.cpp  Field.h
Observer/: EventHandler.cpp  EventHandler.h  EventListener.cpp  EventListener.h  EventManager.cpp  EventManager.h  EventMessage.h  EventType.h  FieldObserver.h  IEventMessage.h  LogObserver.h
Observer/Events/: IEventMessage.h
Provider/: ControlSchemeFileProvider.cpp  ControlSchemeFileProvider.h
Systems/: ObjectController.cpp  ObjectController.h
Tests/: CMakeLists.txt  Observer.cpp  Observer.h  TestField.cpp  TestInput.cpp  TestInput.h  TestObserver.cpp  TestObserver.h
Tests/ECSTest/: ComponentMocks.h  TestComponentsCache.cpp  TestFilter.cpp  TestWorld.cpp
Tests/EngineTest/: TestViewSystem.cpp
Tests/UtilityTest/: TestEventHandler.cpp
Tests/gtests/: CMakeLists.txt  TestComponentBag.cpp  TestEventHandler.cpp  TestField.cpp
Tests/gtests/ECS/: ComponentMocks.h  TestComponentBag.cpp  TestComponentsCache.cpp  TestWorld.cpp
Utility/: Concepts.h  EventHandler.h  Helper.h  IConvertibleToString.h  IDisposable.h  Identified.cpp  Identified.h  Log.cpp  Log.h  MethodContainer.h  Object.cpp  Object.h  Template.h  Tuple.h  TypeIdentifier.cpp  TypeIdentifier.h
Utility/DI/: Container.h  Helper.h
Utility/Log/: Levels.h  Log.h  Logger.cpp  Logger.h  SubLoggers.h
Utility/Observer/: EventListener.cpp  EventListener.h  EventManager.cpp  EventManager.h  EventMessage.h
View/: CellViewRecognizer.cpp  CellViewRecognizer.h  FieldViewMessage.cpp  FieldViewMessage.h  LogViewMesssage.h
View/Console/: FieldViewAdapter.cpp  FieldViewAdapter.h  FieldViewWidget.cpp  FieldViewWidget.h  Grid.cpp  Grid.h  Helper.cpp  Helper.h  IWidgetObserver.h  LogViewWidget.cpp  LogViewWidget.h  Observer.h  ViewRenderer.cpp  ViewRenderer.h  Widget.cpp  Widget.h  WidgetObserver.h
View/ConsoleView/: ConsoleFieldViewAdapter.cpp  ConsoleFieldViewAdapter.h  ConsoleFieldViewTab.cpp  ConsoleFieldViewTab.h  ConsoleHelper.h  ConsoleLogViewTab.cpp  ConsoleLogViewTab.h  ConsoleViewRenderer.cpp  ConsoleViewRenderer.h  ConsoleWindowObserver.h  ConsoleWindowTab.cpp  ConsoleWindowTab.h  WindowsConsoleHelper.cpp  WindowsConsoleHelper.h
View/File/: ViewRenderer.cpp  (+1 more)
gtests/: CMakeLists.txt  TestComponentBag.cpp  TestField.cpp
(+27 files in other folders)
