cmake_minimum_required(VERSION 3.20)
project(Game)

set(CMAKE_CXX_STANDARD 20)
#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=address -fsanitize-recover=address -O1 -fno-omit-frame-pointer -g")

set(Headers
        Game/Field/Cell.h
        Utility/Observer/EventMessage.h
        ECSLib/Core/Entity.h
        Game/Field/Field.h
        Datatypes/Point.h
        Utility/Observer/EventListener.h
        Utility/Observer/EventManager.h
        Engine/Input/KeyboardInputReader/KeyboardInputReader.h
        config.h
        Utility/IConvertibleToString.h
        Utility/Concepts.h
        Game/Events/IEvent.h
        Engine/Input/IController.h
        Engine/Input/KeyboardInputReader/ControlScheme.h
        Engine/Input/InputMessage.h
        Engine/Core/ITickable.h
        ECSLib/Components/Component.h
        ECS/Components/Transform.h
        ECS/Systems/ObjectControllerSystem.h
        Utility/Tuple.h
        ECSLib/Core/World.h
        Engine/Input/InputReader.h
        Utility/MethodContainer.h
        Engine/Core/Application.h
        Engine/Input/InputSystem.h
        Utility/EventHandler.h
        Utility/Template.h
        Core/MainApplication.h
        Utility/TypeIdentifier.h
        ECSLib/Components/ComponentConcept.h
        ECS/Systems/MovementSystem.h
        ECSLib/Components/ComponentsCache.h
        ECSLib/Core/Filter.h
        ECSLib/Systems/System.h
        ECSLib/Systems/TickableSystem.h
        ECS/EntityProviders/PlayerProvider.h
        ECS/Markers/ControllableMarker.h
        ECS/Components/Health.h
        ECS/Components/Weapon.h
        ECS/Components/Intelligence.h
        ECS/Components/Velocity.h
        Datatypes/Vector.h
        Engine/View/ViewSystem.h
        Engine/View/ViewRenderer.h
        Utility/Identified.h
        Utility/Object.h
        Game/Events/Event.h
        Utility/Log/Levels.h
        View/Console/ViewRenderer.h
        View/Console/FieldViewAdapter.h
        View/Console/Helper.h
        View/Console/FieldViewWidget.h
        View/Console/LogViewWidget.h
        Utility/IDisposable.h
        Core/ViewSystemDeployer.h
        Core/InputSystemDeployer.h
        Core/IApplication.h
        Game/Field/FieldEventMessage.h
        Observer/FieldObserver.h
        View/CellViewRecognizer.h
        Utility/Log/Logger.h
        Observer/LogObserver.h
        Message/LogInfoMesssage.h
        Datatypes/Size.h
        View/Console/IWidgetObserver.h
        View/Console/Widget.h
        Datatypes/Rect.h
        View/Console/Grid.h
        Utility/DI/Container.h
        Utility/DI/Helper.h
        Game/Events/EventFactory.h
        ECS/Markers/PlayerMarker.h
        Game/Events/ControlInversionEvent.h
        ECSLib/Systems/TSystem.h
        ECS/Markers/InvertControlMarker.h
        Game/Field/Generator/FieldGenerator.h
        Core/GameDeployer.h
        Game/Game.h
        Game/Events/MoneyEvent.h
        ECS/Components/Money.h
        Game/Events/GenerateMoneyEvent.h
        Game/Events/EnemyEvent.h
        ECS/Systems/HealthSystem.h
        ECS/Markers/DeadMarker.h
        ECS/Systems/CleanDeadSystem.h
        Game/IGame.h
        Game/Events/ExitEvent.h
        Game/Events/WorldEvent.h
        Game/Events/FieldEvent.h
        View/File/ViewRenderer.h
        Utility/Log/Levels.h
        Utility/Log/Log.h
        Utility/Log/SubLoggers.h
        ECS/Systems/DealDamageSystem.h
        ECS/Components/DealDamageEvent.h
        ECS/Components/AddMoneyEvent.h
        ECS/Systems/AddMoneySystem.h
        Engine/Utility/InfoMessage.h
        Core/LogSystemCustomizer.h
        Provider/ControlSchemeFileProvider.h
        Logger/FieldLogger.h
        Game/GameController.h
        )

set(Sources
        main.cpp
        Game/Field/Cell.cpp
        ECSLib/Core/Entity.cpp
        Game/Field/Field.cpp
        Utility/Observer/EventListener.cpp
        Utility/Observer/EventManager.cpp
        Engine/Input/KeyboardInputReader/KeyboardInputReader.cpp
        Engine/Input/KeyboardInputReader/ControlScheme.cpp
        ECSLib/Components/Component.cpp
        ECS/Components/Transform.cpp
        ECS/Systems/ObjectControllerSystem.cpp
        ECSLib/Core/World.cpp
        Engine/Core/Application.cpp
        Engine/Input/InputSystem.cpp
        Core/MainApplication.cpp
        Datatypes/Point.cpp
        ECS/Systems/MovementSystem.cpp
        ECSLib/Components/ComponentsCache.cpp
        ECSLib/Systems/System.cpp
        ECS/EntityProviders/PlayerProvider.cpp
        ECS/Markers/ControllableMarker.cpp
        ECS/Components/Health.cpp
        ECS/Components/Weapon.cpp
        ECS/Components/Intelligence.cpp
        ECS/Components/Velocity.cpp
        Datatypes/Vector.cpp
        Engine/View/ViewSystem.cpp
        Utility/TypeIdentifier.cpp
        Utility/Identified.cpp
        Utility/Object.cpp
        View/Console/ViewRenderer.cpp
        View/Console/FieldViewAdapter.cpp
        View/Console/FieldViewWidget.cpp
        View/Console/LogViewWidget.cpp
        View/Console/Helper.cpp
        Utility/Log/Logger.cpp
        Datatypes/Size.cpp
        Message/FieldInfoMessage.cpp
        View/Console/Widget.cpp
        Datatypes/Rect.cpp
        View/Console/Grid.cpp
        Game/Events/Event.cpp
        ECS/Markers/PlayerMarker.cpp
        Game/Events/ControlInversionEvent.cpp
        ECS/Markers/InvertControlMarker.cpp
        View/CellViewRecognizer.cpp
        Game/Field/Generator/FieldGenerator.cpp
        Game/Game.cpp
        Game/Events/MoneyEvent.cpp
        ECS/Components/Money.cpp
        Game/Events/GenerateMoneyEvent.cpp
        Game/Events/EnemyEvent.cpp
        ECS/Systems/HealthSystem.cpp
        ECS/Markers/DeadMarker.cpp
        ECS/Systems/CleanDeadSystem.cpp
        Game/Events/ExitEvent.cpp
        Game/Events/WorldEvent.cpp
        Game/Events/FieldEvent.cpp
        Game/Events/EventFactory.cpp
        View/File/ViewRenderer.cpp
        ECS/Systems/DealDamageSystem.cpp
        ECS/Components/DealDamageEvent.cpp
        ECS/Components/AddMoneyEvent.cpp
        ECS/Systems/AddMoneySystem.cpp
        Provider/ControlSchemeFileProvider.cpp
        Logger/FieldLogger.cpp
        Game/GameController.cpp
        )

add_executable(Game ${Sources} ${Headers})
add_subdirectory(Tests)